# biscotti

./: .gitattributes  .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENSES  about.hbs  about.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/app_model/: Cargo.toml
crates/app_model/src/: lib.rs
crates/biscotti/: Cargo.toml  build.rs
crates/biscotti/src/: main.rs
crates/biscotti/src/gui/: buttons.rs  event_log.rs  mod.rs  palette.rs  scrollbar.rs  settings.rs  toast.rs  util.rs  widgets.rs  worker.rs
crates/config_store/: Cargo.toml
crates/config_store/src/: lib.rs
crates/file_ready_checker/: Cargo.toml
crates/file_ready_checker/src/: lib.rs
crates/history_store/: Cargo.toml
crates/history_store/src/: lib.rs
crates/photo_watcher/: Cargo.toml
crates/photo_watcher/src/: lib.rs
crates/qr_core/: Cargo.toml
crates/qr_core/src/: lib.rs
docs/: development.md
